--- a/index.html
+++ b/index.html
@@ -8,40 +8,17 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" />
   <script src="https://kit.fontawesome.com/599f069921.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="style.css" />
-  <title>Market Bazar | Angelo Belardo</title>
+  <title>Market Place | Angelo Belardo</title>
 </head>
 
 <body>
   <!-- NAVBAR SECTION -->
-  <nav class="navbar bg-body-tertiary">
-    <div class="container-fluid">
-      <a class="navbar-brand">Market Bazar</a>
-      <button class="btn float-end btn-cart" data-bs-toggle="offcanvas" data-bs-target="#offcanvas" role="button"
-        id="btnTop">
-        <i class="fa-solid fa-cart-shopping"></i>
-      </button>
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
-    </div>
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand px-3" href="#">Market Place</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
   </nav>
-  
-  <!-- SIDEBAR CART -->
-  <!-- <div class="offcanvas offcanvas-start w-25 bg-dark" data-bs-theme="dark" tabindex="-1" id="offcanvas" data-bs-keyboard="false" data-bs-backdrop="false">
-    <div class="offcanvas-header">
-        <h6 class="offcanvas-title d-none d-sm-block" id="offcanvas">Cart</h6>
-        <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-    </div>
-    <div class="offcanvas-body px-0">
-        <div class="d-flex justify-content-between">
-            <p class="totale"> TOTAL €<span class="totCarrello"></span></p>
-            <button class="btn-cestino mb-2 bg-dark" data-bs-theme="dark" onclick="trashCan()"><i class="fa-solid fa-trash-can me-4 pe-3"></i></button>           
-        </div>
-        <ul id="listaCarrello">
-        </ul>           
-    </div>
-</div> -->
 
   <!-- INPUTS SECTION -->
   <div class="create-box inputs">
@@ -67,7 +44,7 @@
           aria-label=".form-control-sm example">
       </div>
     </div>
-    <div class="row mt-5">
+    <div class="row m-5">
       <div class="col-sm-2 aligntext-center">
       </div>
       <button class="btn btn-dark" id="create-btn">
@@ -82,15 +59,62 @@
 
   </div>
 
+  <!-- INPUTS EDIT -->
+  <div class="create-box inputs d-none" id="modifyModale">
+    <div class="row mt-5">
+      <div class="col-sm-3">
+        <input class="form-control form-control-sm" type="text" placeholder="Name" id="name-fieldEdit"
+          aria-label=".form-control-sm example">
+      </div>
+      <div class="col-sm-3">
+        <input class="form-control form-control-sm" type="text" placeholder="Description" id="desc-fieldEdit"
+          aria-label=".form-control-sm example">
+      </div>
+      <div class="col-sm-2">
+        <input class="form-control form-control-sm" type="text" placeholder="Brand" id="brand-fieldEdit"
+          aria-label=".form-control-sm example">
+      </div>
+      <div class="col-sm-2">
+        <input class="form-control form-control-sm" type="text" placeholder="Img-Url" id="image-fieldEdit"
+          aria-label=".form-control-sm example">
+      </div>
+      <div class="col-sm-2">
+        <input class="form-control form-control-sm" type="number" step="0.01" placeholder="Price" id="price-fieldEdit"
+          aria-label=".form-control-sm example">
+      </div>
+    </div>
+    <div class="row m-5">
+      <div class="col-sm-2 aligntext-center">
+      </div>
+      <button class="btn btn-dark" id="update-btn">
+        <i class="fa-solid fa-plus me-1"></i>
+        <span>Modifica Post</span>
+      </button>
+    </div>
+  </div>
+
 <!-- CARD SECTION -->
 <div class="container">
   <section class="row" id="results-box">
   </section>
 </div>
 
+<div class="modal fade" id="productModal" tabindex="-1" aria-labelledby="productModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="productModalLabel">Dettagli Prodotto</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <div id="productDetails"></div>
+      </div>
+    </div>
+  </div>
+</div>
 
 <!-- FOOTER SECTION -->
-  <section class="footer p-4">
+  <section class="footer p-4 mt-5">
     <footer class="w-100">
       <div class="row">
         <div class="col-3">
